[gd_scene load_steps=4 format=3 uid="uid://c1fnbd3f48vmo"]

[ext_resource type="Script" uid="uid://bbymlq61uan3i" path="res://Player.gd" id="1_0hdqx"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xhfnw"]
load_path = "res://.godot/imported/idle1.png-e4f9136f6678270b6a8ee33b61258324.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1hdyx"]
size = Vector2(16, 32)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_0hdqx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.5, 0.5)
texture = SubResource("CompressedTexture2D_xhfnw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1hdyx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
